# FastAPI-boilerplate

./: README.md  alembic.ini  env.example  pyproject.toml  pytest.ini
alembic/: env.py
app/: main.py
app/core/: database.py
app/core/models/: model.py
app/core/repository/: base_repository.py  exceptions.py
app/settings/: config.py
tests/: conftest.py  utils.py
