[tool.poetry]
name = "fastapi-boilerplate"
version = "0.1.0"
description = ""
authors = ["Kelv1nG <kelvinmaglipon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.0"
SQLAlchemy = "^2.0.31"
pytest = "^8.3.2"
mypy = "^1.11.1"
black = "^24.8.0"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
